@@ -29,6 +29,7 @@ export(bitr)
 export(buildGOmap)
 export(cnetplot)
 export(compareCluster)
+export(dropGO)
 export(enrichDAVID)
 export(enrichGO)
 export(enrichKEGG)
