@@ -1,5 +1,7 @@
 CHANGES IN VERSION 2.3.8
 ------------------------
+ o dropGO function <2015-09-24, Thu>
+   + see https://github.com/GuangchuangYu/clusterProfiler/issues/26
  o use_internal_data = TRUE in enrichKEGG example to speedup compilation of vignette and prevent error when online is not available <2015-09-23, Wed>
  
 CHANGES IN VERSION 2.3.7
